@@ -1,7 +1,6 @@
 -server
 -Xms128m
 -Xmx512m
--XX:MaxPermSize=350m
 -XX:+UseConcMarkSweepGC
 -XX:+UseParNewGC
 -XX:+CMSParallelRemarkEnabled
